--- a/index.html
+++ b/index.html
@@ -603,13 +603,13 @@
                     </div>
                 </div>
 
-                <!-- Map Placeholder -->
-                <div class="rounded-2xl overflow-hidden h-96 bg-gray-100 flex items-center justify-center">
-                    <div class="text-center text-gray-400">
-                        <i class="fas fa-map text-5xl mb-4"></i>
-                        <p class="text-lg">Google Map</p>
-                        <p class="text-sm">(荒川区町屋1-3-12)</p>
-                    </div>
+                <!-- Google Map -->
+                <div class="rounded-2xl overflow-hidden" style="position: relative; padding-bottom: 56.25%; height: 0;">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3238.2807074542693!2d139.7818027!3d35.7439047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188f339ce37d71%3A0x8f70fceb193893ed!2sTOKYO%20L.O.C.A.L%20BASE!5e0!3m2!1sja!2sjp!4v1770714922758!5m2!1sja!2sjp"
+                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0; filter: grayscale(20%);"
+                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
                 </div>
             </div>
         </div>
