--- a/index.html
+++ b/index.html
@@ -247,7 +247,8 @@
                     <span class="text-xs ml-1">会場</span>
                 </a>
             </nav>
-            <a href="#reservation" class="cta-button text-white px-6 py-2 rounded-full text-sm font-medium">
+            <a href="https://utage-system.com/event/JyVj8jZsjTmj/register"
+                class="cta-button text-white px-6 py-2 rounded-full text-sm font-medium">
                 Reserve
             </a>
         </div>
@@ -312,7 +313,7 @@
             </div>
 
             <!-- CTA -->
-            <a href="#reservation"
+            <a href="https://utage-system.com/event/JyVj8jZsjTmj/register"
                 class="cta-button btn-shine inline-block text-white px-12 py-4 rounded-full font-medium text-lg">
                 席を確保する <i class="fas fa-arrow-right ml-2"></i>
             </a>
@@ -562,6 +563,7 @@
     </section>
 
     <!-- Participants Section - MEMBERS -->
+    <!--
     <section class="py-32 bg-nuance relative overflow-hidden">
         <div class="max-w-6xl mx-auto">
             <div class="text-center mb-20 px-6 fade-in-up">
@@ -572,13 +574,10 @@
                 <p class="text-lg text-gray-600">どんな人が来るのか。同じ志を持つ仲間と繋がる場。</p>
             </div>
 
-            <!-- Horizontal Scroll Container -->
             <div class="relative fade-in-up">
-                <!-- Scroll wrapper with padding for mobile -->
                 <div class="overflow-x-auto pb-6 px-6 md:px-0 hide-scrollbar"
                     style="-webkit-overflow-scrolling: touch;">
                     <div class="flex md:grid md:grid-cols-4 gap-6 md:gap-8" style="min-width: min-content;">
-                        <!-- Participant 1 -->
                         <div
                             class="glass-card rounded-2xl overflow-hidden group hover:shadow-2xl transition-all duration-300 flex-shrink-0 w-64 md:w-auto">
                             <div class="overflow-hidden rounded-t-2xl">
@@ -591,7 +590,6 @@
                             </div>
                         </div>
 
-                        <!-- Participant 2 -->
                         <div
                             class="glass-card rounded-2xl overflow-hidden group hover:shadow-2xl transition-all duration-300 flex-shrink-0 w-64 md:w-auto">
                             <div class="overflow-hidden rounded-t-2xl">
@@ -604,7 +602,6 @@
                             </div>
                         </div>
 
-                        <!-- Participant 3 -->
                         <div
                             class="glass-card rounded-2xl overflow-hidden group hover:shadow-2xl transition-all duration-300 flex-shrink-0 w-64 md:w-auto">
                             <div class="overflow-hidden rounded-t-2xl">
@@ -617,7 +614,6 @@
                             </div>
                         </div>
 
-                        <!-- Participant 4 -->
                         <div
                             class="glass-card rounded-2xl overflow-hidden group hover:shadow-2xl transition-all duration-300 flex-shrink-0 w-64 md:w-auto">
                             <div class="overflow-hidden rounded-t-2xl">
@@ -634,6 +630,7 @@
             </div>
         </div>
     </section>
+    -->
 
     <!-- Access Section - INFORMATION -->
     <section id="access" class="py-32 px-6 relative overflow-hidden">
@@ -717,7 +714,8 @@
                 そんな悩みから、ようやく解放される場所がここにあります。
             </p>
 
-            <a href="#" class="cta-button-outline btn-shine inline-block px-12 py-5 rounded-full text-xl font-medium">
+            <a href="https://utage-system.com/event/JyVj8jZsjTmj/register"
+                class="cta-button-outline btn-shine inline-block px-12 py-5 rounded-full text-xl font-medium">
                 今すぐ席を確保する <i class="fas fa-arrow-right ml-2"></i>
             </a>
             <p class="text-sm mt-8 opacity-75">※ 定員に達し次第、受付終了</p>
