--- a/index.html
+++ b/index.html
@@ -722,6 +722,16 @@
         </div>
     </section>
 
+    <!-- Mobile Fixed Bottom CTA (Mobile Only) -->
+    <div class="md:hidden fixed bottom-0 left-0 right-0 z-50 bg-white border-t border-gray-200 shadow-2xl">
+        <div class="px-4 py-3">
+            <a href="https://utage-system.com/event/JyVj8jZsjTmj/register"
+                class="cta-button btn-shine block text-center text-white px-8 py-4 rounded-full font-medium text-base w-full">
+                席を確保する <i class="fas fa-arrow-right ml-2"></i>
+            </a>
+        </div>
+    </div>
+
     <!-- Footer -->
     <footer class="bg-white border-t border-gray-100 py-12 px-6">
         <div class="max-w-6xl mx-auto">
