--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             <div class="text-center mb-8">
                 <span class="inline-block px-6 py-3 border border-accent text-text rounded-full text-sm font-medium">
                     <i class="fas fa-calendar-alt mr-2 text-accent"></i>
-                    2026.03.31 (Mon) @ TOKYO
+                    2026.03.31 (Tue) @ TOKYO
                 </span>
             </div>
 
@@ -650,7 +650,7 @@
                         </div>
                         <div>
                             <h4 class="font-bold text-lg mb-2">Date</h4>
-                            <p class="text-gray-700">2026年3月31日(月)</p>
+                            <p class="text-gray-700">2026年3月31日(火)</p>
                             <p class="text-sm text-gray-600 mt-2">会場17時～　懇親会19時～</p>
                         </div>
                     </div>
